; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_dbsize.c_numeric_is_less.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_dbsize.c_numeric_is_less.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numeric_lt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @numeric_is_less to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @numeric_is_less(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @NumericGetDatum(i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @NumericGetDatum(i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* @numeric_lt, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @DirectFunctionCall2(i32 %11, i32 %12, i32 %13)
  %15 = call i32 @DatumGetBool(i32 %14)
  ret i32 %15
}

declare dso_local i32 @NumericGetDatum(i32) #1

declare dso_local i32 @DatumGetBool(i32) #1

declare dso_local i32 @DirectFunctionCall2(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
